src/test/testData/parser/good/StatementDisp.basic
Disp 1,2,3,4,5,cos(4
Disp A+1,B/2,sin(3)
Disp A+1,2>DMS,1