src/test/testData/parser/bad/FlowISDS.basic
IS>
2->A
IS>(
2->A
IS>()
2->A
IS>(A
2->A
IS>(A)
2->A
IS>(A,1,
2->A